# gradients-of-agreement

./: Cargo.toml
src/: main.rs
src/commands/: goa.rs  mod.rs
